fixed canvas API request not working on mobile

--- a/src/components/NavMenu/NavMenu.css
+++ b/src/components/NavMenu/NavMenu.css
@@ -16,7 +16,7 @@
   background-color: black;
   height: 100vh;
   padding: 2.5em 2.5em;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
