--- a/src/components/TrackStatsCard/CanvasPlayer/CanvasPlayer.css
+++ b/src/components/TrackStatsCard/CanvasPlayer/CanvasPlayer.css
@@ -1,19 +1,23 @@
 .canvas--container {
   display: flex;
+  height: 15em;
   justify-content: center;
+  overflow: hidden;
   position: relative;
+  transform: translatez(0);
 }
 
-.canvas--video {
+.canvas-video--minimized {
+  transform: translatez(0);
   position: absolute;
-  max-width: 430px;
-  padding: 2.5em;
+  top: -100%;
+  bottom: -200%;
+  left: -100%;
+  right: -100%;    
+  margin: auto;
+  max-width: 100%;
 }
 
 @media(min-width: 768px) {
-
-  .canvas--video {
-    padding: 0; 
-  }
 
 }
